xdp-dns: add bpf ring buf and user space program
add bpf ring buff and user space to log the DNS query
to system log for DNS query monitoring

use clang-format to format the code

clang-format -i xdp-dns/xdp_dns.bpf.c to format the code

Signed-off-by: Vincent Li <vincent.mc.li@gmail.com>

--- a/xdp-dns/Makefile
+++ b/xdp-dns/Makefile
@@ -2,7 +2,7 @@
 
 XDP_TARGETS := xdp_dns.bpf
 BPF_SKEL_TARGETS := $(XDP_TARGETS)
-USER_TARGETS := xdp_dns
+USER_TARGETS := xdp_dns xdp_dns_log
 
 LIB_DIR = ../lib
 
