xdp-sni: enable XDP TLS SNI logging
drop the reverse fucntion as verifier complains
program is too large. add SNI logging
with bpf ringbuf

Signed-off-by: Vincent Li <vincent.mc.li@gmail.com>

--- a/xdp-sni/Makefile
+++ b/xdp-sni/Makefile
@@ -2,7 +2,7 @@
 
 XDP_TARGETS := xdp_sni.bpf
 BPF_SKEL_TARGETS := $(XDP_TARGETS)
-USER_TARGETS := xdp_sni
+USER_TARGETS := xdp_sni xdp_sni_log
 
 LIB_DIR = ../lib
 
