Add capability to compile tc user and bpf program
add ability to compile the tc user and bpf program in xdp-tools

Signed-off-by: Vincent Li <vincent.mc.li@gmail.com>

--- a/lib/testing/Makefile
+++ b/lib/testing/Makefile
@@ -4,6 +4,7 @@ TEST_TARGETS := test-tool
 XDP_TARGETS := test_long_func_name xdp_drop xdp_pass xdp_adjust_tail
 SCRIPTS_FILES := test_runner.sh setup-netns-env.sh run_tests.sh
 XDP_OBJ_INSTALL :=
+TC_OBJ_INSTALL :=
 
 LIB_DIR = ..
 
@@ -13,3 +14,4 @@ install_local::
 	install -m 0755 -d $(DESTDIR)$(SCRIPTSDIR)
 	install -m 0644 test_config.install.sh $(DESTDIR)$(SCRIPTSDIR)/test_config.sh
 	install -m 0644 $(XDP_OBJ) $(DESTDIR)$(SCRIPTSDIR)/
+	install -m 0644 $(TC_OBJ) $(DESTDIR)$(SCRIPTSDIR)/
