--- a/tc-basic-classifier/Makefile
+++ b/tc-basic-classifier/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: (GPL-2.0 OR BSD-2-Clause)
 
+USER_TARGETS := class_filter
 TC_TARGETS := class_filter.bpf
 BPF_SKEL_TARGETS := $(TC_TARGETS)
 
